# fil_training

./: README.md
c_cpp/c/: .gitignore  CMakeLists.txt  README.md
c_cpp/c/include/: my_io.h  my_render.h  pointcloud.h
c_cpp/c/my_program/: main.c
c_cpp/c/src/: my_io.c  my_render.c  pointcloud.c
c_cpp/cpp/: README.md
emulation/netem/: README.md
emulation/tbf/: README.md
http/h1/: CMakeLists.txt  README.md
http/h1/client/: main.c
http/h1/include/: http_client.h
http/h1/src/: http_client.c
http/libcurl/: CMakeLists.txt  README.md  main.c
http/libnghttp2/: README.md
http/libnghttp3/: README.md
python/: .gitignore  README.md  my_program.py
python/my_package/: my_class.py  my_io.py  my_render.py
socket/tcp/: CMakeLists.txt  README.md
socket/tcp/client/: main.c
socket/tcp/server/: main.c
socket/udp/: CMakeLists.txt  README.md
socket/udp/receiver/: main.c
socket/udp/sender/: main.c
